# HM-AI-Agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  mcp-brasil.md
src/agents/: README.md  core.py
src/application/: README.md
src/config/: README.md
src/domain/: README.md
src/infrastructure/: README.md
src/infrastructure/mcp/: registry.py  servers.py
src/infrastructure/tools/: system_time.py
src/interfaces/: README.md
src/shared/: README.md
tests/: README.md  test_mcp_brasil_config.py
