[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hm-ai-agent"
version = "0.1.0"
description = "Personal AI agent powered by MCP integrations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-brasil>=0.14.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
